plang/testing/logs/false-incorrect/17/program17.p.p.out
Error at x0Ex (ShQ) :- (a2ILM).:2:13 error: 
x0Ex (ShQ) :- (a2ILM).
            ^
Error at x0Ex (ShQ) :- (a2ILM).:2:20 error: 
x0Ex (ShQ) :- (a2ILM).
                   ^